Add managed classes to persistence unit explicitly